Fix notification align text

--- a/styles/_message-modal.scss
+++ b/styles/_message-modal.scss
@@ -1,4 +1,5 @@
 .message-modal {
+  text-align: center;
   padding: var(--default-padding);
   background-color: #42a342;
   color: #fff;
@@ -8,7 +9,7 @@
   font-family: Inter;
   font-size: 1.8rem;
   font-weight: 700;
-    transform: translate(-50%, -100%);
+  transform: translate(-50%, -100%);
   transition: transform var(--transition-timing) ease-in-out;
   border-radius: var(--default-radius);
 
